--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -460,7 +460,7 @@
         </div>
     </footer>
 
-    <script src="test.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
