--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samir Nassiri - Front-End Developer Portfolio</title>
     <meta name="description"
-        content="Alex Johnson - Passionate Front-End Developer specializing in HTML, CSS, JavaScript, and modern web technologies. Check out my portfolio and get in touch!">
+        content="Samir Nassiri - Passionate Front-End Developer specializing in HTML, CSS, JavaScript, and modern web technologies. Check out my portfolio and get in touch!">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js"></script>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0ZVWNKG7QM"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 
