add seo and analytics

--- a/index.html
+++ b/index.html
@@ -7,14 +7,27 @@
     <title>Samir Nassiri - Front-End Developer Portfolio</title>
     <meta name="description"
         content="Samir Nassiri - Passionate Front-End Developer specializing in HTML, CSS, JavaScript, and modern web technologies. Check out my portfolio and get in touch!">
+    <meta name="google-site-verification" content="1dWNwNTFyMPsJECpiPhgTJ9p0pKBkJ20e6x5OXMnKWg" />
+    <meta name="description"
+        content="I'm Samir Nassiri, a front-end developer from Morocco. Explore my portfolio with projects built using HTML, CSS, JavaScript, and responsive design.">
+    <meta name="keywords"
+        content="Samir Nassiri, front-end developer, HTML CSS JavaScript, web portfolio, responsive websites, freelance developer, developer Morocco, junior web developer">
+    <meta property="og:title" content="Samir Nassiri | Front-End Developer Portfolio">
+    <meta property="og:description" content="Discover my front-end projects built using HTML, CSS, and JavaScript.">
+    <meta property="og:image" content="documents/new portfolio.png">
+    <meta property="og:url" content="https://sn-101.github.io/new-portfolio/">
+    <meta property="og:type" content="website">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="documents/Logo.webp" type="icon_path">
+
     <script src="https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js"></script>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-0ZVWNKG7QM"></script>
-    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -460,7 +473,7 @@
         </div>
     </footer>
 
-    <script src="main.js"></script>
+    <script defer src="main.js"></script>
 </body>
 
 </html>
