--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="documents/Logo.webp" type="icon_path">
 
-    <script src="https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js"></script>
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js"></script>
+    <script defer src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-0ZVWNKG7QM"></script>
 </head>
 
