add skiils and my picture and make the year dynamic

--- a/index.html
+++ b/index.html
@@ -287,11 +287,12 @@
                 </div>
                 <div class="about-image">
                     <div class="image-placeholder">
-                        <svg width="120" height="120" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                        <!-- <svg width="120" height="120" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-width="2">
                             <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2" />
                             <circle cx="12" cy="7" r="4" />
-                        </svg>
+                        </svg> -->
+                        <img class="image-placeholder" src="documents/me.jpg" alt="My personal picture">
                     </div>
                 </div>
             </div>
@@ -466,7 +467,7 @@
 
                 <div class="footer-bottom">
                     <p class="copyright">
-                        © 2025 – All rights reserved – Samir Nassiri
+                        © <script>document.write(new Date().getFullYear())</script> – All rights reserved – Samir Nassiri
                     </p>
                 </div>
             </div>
