add skills and projects 1

--- a/index.html
+++ b/index.html
@@ -254,20 +254,10 @@
             <div class="about-content">
                 <div class="about-text">
                     <p class="about-paragraph">
-                        Hello! I'm Samir, Passionate and detail-oriented Front-End Developer with a strong foundation in
-                        web development and user
-                        interface
-                        design. Proficient in HTML and CSS, with a growing expertise in JavaScript. Skilled in crafting
-                        responsive, visually
-                        appealing, and user-friendly websites.</p>
-
-                    <p class="about-paragraph">
-                        Seeking an internship opportunity to apply and enhance my skills
-                        in performance
-                        optimization, user experience, and cross-browser compatibility. Dedicated to continuous learning
-                        and
-                        improvement in the
-                        field of web development.
+                        Second-year student, Specialized Technician in Computer Development, passionate about web development and modern
+                        technologies. Strong skills in JavaScript and Python, with practical experience in React, Bootstrap, and responsive
+                        interface design. Developed a multilingual municipal website using HTML, CSS, JavaScript, and JSON. Seeking an
+                        internship to consolidate my technical skills and actively contribute to concrete projects within a dynamic team.
                     </p>
 
                     <button id="download-btn" class="download-btn">
@@ -292,7 +282,7 @@
                             <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2" />
                             <circle cx="12" cy="7" r="4" />
                         </svg> -->
-                        <img class="image-placeholder" src="documents/me.jpg" alt="My personal picture">
+                        <img class="image-placeholder" src="documents/my picture.webp" alt="My personal picture">
                     </div>
                 </div>
             </div>
