--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                             <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2" />
                             <circle cx="12" cy="7" r="4" />
                         </svg> -->
-                        <img class="image-placeholder" src="documents/my picture.webp" alt="My personal picture">
+                        <img class="image-placeholder" src="documents/My Picture.webp" alt="My personal picture">
                     </div>
                 </div>
             </div>
